enviar imagem (em andamento)

--- a/assets/css/estiloL.css
+++ b/assets/css/estiloL.css
@@ -499,9 +499,6 @@ body {
 	-webkit-box-shadow:-1px 4px 26px 11px rgba(0,0,0,0.75);
 	box-shadow: -1px 4px 26px 11px rgba(0,0,0,0.75);
 }
-#erros{
-	display: none;
-}
-#msgEmail{
+#msgEmail, #msgImagem, #erros{
 	display: none;
 }
