--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -3,22 +3,21 @@
 	padding: 0;
 }
 #nav{
-	background: rgb(21,21,21,0.6);
+	background: rgb(0,0,0,0.9);
 	border:none;
 	margin: 2px 15px;
-
 }
 #nav a{
 	color:white;
 }
 #jumbotron{
 	opacity: 0.8;
-	min-height:300px; 
+	min-height:500px; 
 	position: relative;
 	display: flex;
 	justify-content: center;
 	color:white;
-	background-image: url("../imgs/fundo.jpg");
+	background-image: url("../imgs/bgF.jpg");
 	background-size: cover;
 	background-position: center center;
 }
@@ -35,5 +34,31 @@
 
 }
 #mensagem{
+	display: none;
+	padding: 10px;
+
+}
+.centered-form{
+	margin-top: 60px;
+}
+
+.centered-form .panel{
+	background: rgba(255, 255, 255, 0.8);
+	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
+}
+#c{
+	margin-top: 20px;
+}
+.card-body{
+	
+	padding: 20px;
+	border-radius: 6px;
+	box-shadow: -1px 4px 26px 11px rgba(0,0,0,0.75);
+}
+.login-img img {width:16%; max-height:20%;}
+#formCad{
+	padding: 15px;
+}
+#imgPerfil{
 	display: none;
 }
