--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -1,6 +1,17 @@
-*{
+body{
 	margin: 0;
 	padding: 0;
+	/* ;
+	background:;*/
+	
+	background-image: url("../imgs/back9.jpg");
+	 background-repeat: no-repeat;
+    background-attachment: fixed;
+
+	background-size: cover;
+	background-position: center center;
+	position: relative;
+
 }
 #nav{
 	background: rgb(0,0,0,0.9);
@@ -11,15 +22,7 @@
 	color:white;
 }
 #jumbotron{
-	opacity: 0.8;
-	min-height:500px; 
-	position: relative;
-	display: flex;
-	justify-content: center;
-	color:white;
-	background-image: url("../imgs/bgF.jpg");
-	background-size: cover;
-	background-position: center center;
+
 }
 #JumbTitulo{
 	float: left;
@@ -55,10 +58,116 @@
 	border-radius: 6px;
 	box-shadow: -1px 4px 26px 11px rgba(0,0,0,0.75);
 }
-.login-img img {width:16%; max-height:20%;}
+.login-img img {width:16%;
+	max-height:20%;
+}
 #formCad{
 	padding: 15px;
 }
-#imgPerfil{
+
+
+#senhaL{
 	display: none;
+}
+.bg{
+	margin-top: 20px;
+}
+.form-signin
+{
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
+	padding-top: 5px;
+}
+.form-signin .form-signin-heading, .form-signin .checkbox
+{
+	margin-bottom: 10px;
+}
+.form-signin .checkbox
+{
+	font-weight: normal;
+}
+.form-signin .form-control
+{
+	position: relative;
+	font-size: 16px;
+	height: auto;
+	padding: 10px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.form-signin .form-control:focus
+{
+	z-index: 2;
+}
+#different_account{
+	display: none;
+	margin-left: 10px;
+
+}
+.form-signin input
+{
+	margin-bottom: 10px;
+}
+.account-wall
+{
+	opacity: 0.95;
+	border-radius: 6px;
+	margin-top: 20px;
+	padding: 40px 0px 20px 0px;
+	background-color: #f7f7f7;
+	-moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow:-1px 2px 13px 8px rgba(0,0,0,0.75);
+	box-shadow: -1px 2px 16px 8px rgba(0,0,0,0.75);
+}
+.login-title
+{
+	color: #555;
+	margin: 20px auto;
+
+	display: block;
+}
+.profile-img
+{
+	width: 96px;
+	height: 96px;
+	margin: 0 auto 10px;
+	display: block;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+}
+.profile-name {
+	display: none;
+	font-size: 16px;
+	font-weight: bold;
+	text-align: center;
+	margin: 10px 0 0;
+	height: 1em;
+}
+.profile-email {
+	display: none;
+	padding: 0 8px;
+	font-size: 15px;
+	color: #404040;
+	line-height: 2;
+	font-size: 14px;
+	text-align: center;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.need-help
+{
+	display: block;
+	margin-top: 10px;
+}
+.new-account
+{
+	display: block;
+	margin-top: 10px;
 }
