--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -4,7 +4,7 @@ body{
 	/* ;
 	background:;*/
 	
-	background-image: url("../imgs/back9.jpg");
+	background-image: url("../imgs/bgfinal.jpg");
 	 background-repeat: no-repeat;
     background-attachment: fixed;
 
