adicionando categorias com ajax

--- a/assets/css/estiloL.css
+++ b/assets/css/estiloL.css
@@ -1,5 +1,5 @@
 body{
-background-image: url("../../assets/imgs/bgfinal.jpg");
+	background-image: url("../../assets/imgs/bgfinal.jpg");
 }
 .card{
 	opacity: 0.6;
@@ -512,62 +512,82 @@ body {
 	display: none;
 }
 .view-group {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    padding-left: 0;
-    margin-bottom: 0;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-direction: row;
+	flex-direction: row;
+	padding-left: 0;
+	margin-bottom: 0;
 }
 .thumbnail
 {
-    margin-bottom: 30px;
-    padding: 0px;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    border-radius: 0px;
+	margin-bottom: 30px;
+	padding: 0px;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
 }
 
 .item.list-group-item
 {
-    float: none;
-    width: 100%;
-    background-color: #fff;
-    margin-bottom: 30px;
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding: 0 1rem;
-    border: 0;
+	float: none;
+	width: 100%;
+	background-color: #fff;
+	margin-bottom: 30px;
+	-ms-flex: 0 0 100%;
+	flex: 0 0 100%;
+	max-width: 100%;
+	padding: 0 1rem;
+	border: 0;
 }
 .item.list-group-item .img-event {
-    float: left;
-    width: 30%;
+	float: left;
+	width: 30%;
 }
 
 .item.list-group-item .list-group-image
 {
-    margin-right: 10px;
+	margin-right: 10px;
 }
 .item.list-group-item .thumbnail
 {
-    margin-bottom: 0px;
-    display: inline-block;
+	margin-bottom: 0px;
+	display: inline-block;
 }
 .item.list-group-item .caption
 {
-    float: left;
-    width: 70%;
-    margin: 0;
+	float: left;
+	width: 70%;
+	margin: 0;
 }
 
 .item.list-group-item:before, .item.list-group-item:after
 {
-    display: table;
-    content: " ";
+	display: table;
+	content: " ";
 }
 
 .item.list-group-item:after
 {
-    clear: both;
+	clear: both;
+}
+.card-body img{
+	max-height: 80px;
+	padding: 10px;
+	margin:10px auto;
+}
+.card-link{
+	margin-left: 10px;
+}
+h1{
+	margin:auto auto 20px auto;
+	font-family: "Comics-sans";
+}
+#semEquipamento{
+	display: none;
+}
+
+#imgIconCad{
+	display: none;
+	max-height: 150px;
 }
