--- a/assets/css/estiloL.css
+++ b/assets/css/estiloL.css
@@ -1,5 +1,6 @@
 body{
 	background-image: url("../../assets/imgs/bgfinal.jpg");
+	margin-bottom: 100px;
 }
 .card{
 	opacity: 0.6;
@@ -590,4 +591,27 @@ h1{
 #imgIconCad{
 	display: none;
 	
+}
+footer {
+	margin-top: 50px;
+	color: #666;
+	background: #222;
+	padding: 17px 0 18px 0;
+	border-top: 1px solid #000; 
+	position: fixed;
+	bottom:0;
+	left:0;
+	width: 100%;
+}
+footer a {
+	color: #999;
+}
+footer a:hover {
+	color: #efefef;
+}
+@media (max-width: 767px) {
+	footer, .wrapper {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
